--- a/src/main/webapp/Views/Template/MainTemplate.xhtml
+++ b/src/main/webapp/Views/Template/MainTemplate.xhtml
@@ -22,7 +22,7 @@
 </h:head>
 
 <h:body>
-<!-- <b:container id="rootContainer"> -->
+ <b:container id="rootContainer"> 
     <div id="divTop">
         <ui:insert name="top">
             <ui:include src="/Views/Template/top.xhtml"/>
@@ -40,6 +40,6 @@
         </ui:insert>
     </div>
  
-    <!-- </b:container> -->
+    </b:container>
 </h:body>
 </html>
