--- a/src/main/webapp/Views/Secured/Practise/CreatePracticeView.xhtml
+++ b/src/main/webapp/Views/Secured/Practise/CreatePracticeView.xhtml
@@ -38,7 +38,7 @@
 									<!-- First Row left coloum -->
 									<b:row>
 										<b:column span="6">
-											<b:inputText required="true" requiredMessage="Practise name cannot be empty"
+											<b:inputText required="true" requiredMessage="Practice name cannot be empty"
 												value="#{createPracticeController.practice.name}"
 												placeholder="Practice Name" />
 										</b:column>
