--- a/src/main/webapp/Views/Secured/Practise/PractiseView.xhtml
+++ b/src/main/webapp/Views/Secured/Practise/PractiseView.xhtml
@@ -60,7 +60,7 @@
 					<h:form style="text-align:center">
 					
 					<h:link value="Edit "
-							outcome="#{practiseController.createClicked()}">
+							outcome="#{sharedData.toCreatePractice()}">
 
 							<f:param name="id" value="#{practise.id}" />
 						</h:link>
