--- a/src/main/webapp/Views/Secured/Practise/PractiseView.xhtml
+++ b/src/main/webapp/Views/Secured/Practise/PractiseView.xhtml
@@ -26,7 +26,7 @@
 
 			<h:form rendered="#{practiseController.canCreatePracise()}">
 			
-			<p:link outcome="#{practiseController.createClicked()}" value="Create Practice" />
+			<p:link outcome="#{sharedData.toCreatePractice()}" value="Create Practice" />
 			</h:form>
 
 			<!-- <ui:include src="/createPractise.xhtml" /> -->
